# PasteGoblin

./: README.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src/app/: App.tsx
src/features/layout/: Header.tsx  MainWindow.tsx  StatusBar.tsx  layout.css
src/features/meme-detail/: MemeDetail.tsx  meme-detail.css
src/features/meme-list/: MemeList.tsx  meme-list.css
src/features/upload/: UploadModal.tsx  upload.css
src/shared/: MemeImage.tsx  file-url.ts  types.ts
